// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login react component Enterint text in input changes value 1`] = `
<div
  className="View__View-jelnfZ bnYeJt"
>
  <h1
    className="Title__Title-lbDhID gxinMP"
  />
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    Please log in
  </p>
  <form
    className="Form__Form-PASBS imuxEL"
    onSubmit={[Function]}
  >
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <label
        className="Label__Label-jsURsk iCwAoZ"
        htmlFor="formNameusername"
        required={false}
      >
        Username
      </label>
      <input
        className="TextInput__Text-jwTuSF bRSPUO"
        id="formNameusername"
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value="haschanged"
      />
    </div>
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <label
        className="Label__Label-jsURsk iCwAoZ"
        htmlFor="formNamepassword"
        required={false}
      >
        Password
      </label>
      <input
        className="TextInput__Text-jwTuSF bRSPUO"
        id="formNamepassword"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="haschanged"
      />
    </div>
    <button
      className="Button__Button-jkHDFw jklsEJ"
      disabled={false}
    >
      Sign in
    </button>
  </form>
</div>
`;

exports[`Login react component Marks button as valid if both fields has 5 characters 1`] = `
<div
  className="View__View-jelnfZ bnYeJt"
>
  <h1
    className="Title__Title-lbDhID gxinMP"
  />
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    Please log in
  </p>
  <form
    className="Form__Form-PASBS imuxEL"
    onSubmit={[Function]}
  >
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <label
        className="Label__Label-jsURsk iCwAoZ"
        htmlFor="formNameusername"
        required={false}
      >
        Username
      </label>
      <input
        className="TextInput__Text-jwTuSF bRSPUO"
        id="formNameusername"
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value=""
      />
    </div>
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <label
        className="Label__Label-jsURsk iCwAoZ"
        htmlFor="formNamepassword"
        required={false}
      >
        Password
      </label>
      <input
        className="TextInput__Text-jwTuSF bRSPUO"
        id="formNamepassword"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <button
      className="Button__Button-jkHDFw jklsEJ"
      disabled={true}
    >
      Form fields not valid
    </button>
  </form>
</div>
`;

exports[`Login react component Marks button as valid if both fields has 5 characters 2`] = `
<div
  className="View__View-jelnfZ bnYeJt"
>
  <h1
    className="Title__Title-lbDhID gxinMP"
  />
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    Please log in
  </p>
  <form
    className="Form__Form-PASBS imuxEL"
    onSubmit={[Function]}
  >
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <label
        className="Label__Label-jsURsk iCwAoZ"
        htmlFor="formNameusername"
        required={false}
      >
        Username
      </label>
      <input
        className="TextInput__Text-jwTuSF bRSPUO"
        id="formNameusername"
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value="More than 5"
      />
    </div>
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <label
        className="Label__Label-jsURsk iCwAoZ"
        htmlFor="formNamepassword"
        required={false}
      >
        Password
      </label>
      <input
        className="TextInput__Text-jwTuSF bRSPUO"
        id="formNamepassword"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="More than 5"
      />
    </div>
    <button
      className="Button__Button-jkHDFw jklsEJ"
      disabled={false}
    >
      Sign in
    </button>
  </form>
</div>
`;

exports[`Login react component Matches earlier configuration 1`] = `
<div
  className="View__View-jelnfZ bnYeJt"
>
  <h1
    className="Title__Title-lbDhID gxinMP"
  >
    This is a title
  </h1>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    Please log in
  </p>
  <form
    className="Form__Form-PASBS imuxEL"
    onSubmit={[Function]}
  >
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <label
        className="Label__Label-jsURsk iCwAoZ"
        htmlFor="formNameusername"
        required={false}
      >
        Username
      </label>
      <input
        className="TextInput__Text-jwTuSF bRSPUO"
        id="formNameusername"
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value=""
      />
    </div>
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <label
        className="Label__Label-jsURsk iCwAoZ"
        htmlFor="formNamepassword"
        required={false}
      >
        Password
      </label>
      <input
        className="TextInput__Text-jwTuSF bRSPUO"
        id="formNamepassword"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <button
      className="Button__Button-jkHDFw jklsEJ"
      disabled={true}
    >
      Form fields not valid
    </button>
  </form>
</div>
`;

exports[`Login react component Returns an error if password is invalid 1`] = `
<div
  className="View__View-jelnfZ bnYeJt"
>
  <h1
    className="Title__Title-lbDhID gxinMP"
  >
    This is a title
  </h1>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    Please log in
  </p>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    It appears something went terribly wrong!
  </p>
  <form
    className="Form__Form-PASBS imuxEL"
    onSubmit={[Function]}
  >
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <label
        className="Label__Label-jsURsk iCwAoZ"
        htmlFor="formNameusername"
        required={false}
      >
        Username
      </label>
      <input
        className="TextInput__Text-jwTuSF bRSPUO"
        id="formNameusername"
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value="Yoda"
      />
    </div>
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <label
        className="Label__Label-jsURsk iCwAoZ"
        htmlFor="formNamepassword"
        required={false}
      >
        Password
      </label>
      <input
        className="TextInput__Text-jwTuSF bRSPUO"
        id="formNamepassword"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="Wrong password this is"
      />
    </div>
    <button
      className="Button__Button-jkHDFw jklsEJ"
      disabled={false}
    >
      Sign in
    </button>
  </form>
</div>
`;

exports[`Login react component Returns an error if username is invalid 1`] = `
<div
  className="View__View-jelnfZ bnYeJt"
>
  <h1
    className="Title__Title-lbDhID gxinMP"
  >
    This is a title
  </h1>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    Please log in
  </p>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    It appears something went terribly wrong!
  </p>
  <form
    className="Form__Form-PASBS imuxEL"
    onSubmit={[Function]}
  >
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <label
        className="Label__Label-jsURsk iCwAoZ"
        htmlFor="undefinedusername"
        required={false}
      >
        Username
      </label>
      <input
        className="TextInput__Text-jwTuSF bRSPUO"
        id="undefinedusername"
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value="This name doesn't exist in Star Wars"
      />
    </div>
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <label
        className="Label__Label-jsURsk iCwAoZ"
        htmlFor="undefinedpassword"
        required={false}
      >
        Password
      </label>
      <input
        className="TextInput__Text-jwTuSF bRSPUO"
        id="undefinedpassword"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="password"
      />
    </div>
    <button
      className="Button__Button-jkHDFw jklsEJ"
      disabled={false}
    >
      Sign in
    </button>
  </form>
</div>
`;

exports[`Login react component Signs in the user of password and username are correct 1`] = `
<div
  className="View__View-jelnfZ bnYeJt"
>
  <h1
    className="Title__Title-lbDhID gxinMP"
  >
    This is a title
  </h1>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    Please log in
  </p>
  <form
    className="Form__Form-PASBS imuxEL"
    onSubmit={[Function]}
  >
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <label
        className="Label__Label-jsURsk iCwAoZ"
        htmlFor="formNameusername"
        required={false}
      >
        Username
      </label>
      <input
        className="TextInput__Text-jwTuSF bRSPUO"
        id="formNameusername"
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value="Yoda"
      />
    </div>
    <div
      className="View__View-jelnfZ bnYeJt"
    >
      <label
        className="Label__Label-jsURsk iCwAoZ"
        htmlFor="formNamepassword"
        required={false}
      >
        Password
      </label>
      <input
        className="TextInput__Text-jwTuSF bRSPUO"
        id="formNamepassword"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="password"
      />
    </div>
    <button
      className="Button__Button-jkHDFw jklsEJ"
      disabled={false}
    >
      Sign in
    </button>
  </form>
</div>
`;
